<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TypeGame">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="315dp"
            android:layout_height="428dp"
            android:layout_gravity="center"
            android:alpha="1"
            android:background="@drawable/board"
            app:columnCount="3"
            app:rowCount="3">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="dropin"
                android:tag="0"
                app:layout_column="0"
                app:layout_row="0" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:onClick="dropin"
                android:tag="1"
                app:layout_column="1"
                app:layout_row="0" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="dropin"
                android:tag="2"
                app:layout_column="2"
                app:layout_row="0" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="50dp"
                android:onClick="dropin"
                android:tag="3"
                app:layout_column="0" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:onClick="dropin"
                android:tag="4"
                app:layout_column="1"
                app:layout_row="1" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:onClick="dropin"
                android:tag="5"
                app:layout_column="2"
                app:layout_row="1" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="60dp"
                android:onClick="dropin"
                android:tag="6"
                app:layout_column="0" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="60dp"
                android:onClick="dropin"
                android:tag="7"
                app:layout_column="1"
                app:layout_row="2" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:onClick="dropin"
                android:tag="8"
                app:layout_column="2"
                app:layout_row="2" />

        </androidx.gridlayout.widget.GridLayout>


        <TextView
            android:id="@+id/backgroundScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E2FFFFFF" />



        <LinearLayout
            android:id="@+id/resultContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/resultImageView"
                android:layout_width="360dp"
                android:layout_height="380dp"
                app:srcCompat="@drawable/trophy" />

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/victory"
                android:textSize="50dp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/playAgainLayout"
            android:layout_width="wrap_content"
            android:layout_height="86dp"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/playAgain"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginEnd="60dp"
                android:layout_weight="1"
                android:background="#E040FB"
                android:onClick="playAgain"
                android:text="@string/play_again"
                app:layout_column="0"
                app:layout_row="1"
                tools:layout_editor_absoluteX="168dp"
                tools:layout_editor_absoluteY="549dp" />

            <Button
                android:id="@+id/homeButton"
                android:layout_width="115dp"
                android:layout_height="71dp"
                android:layout_weight="1"
                android:onClick="homeButton"
                android:text="@string/home" />


        </LinearLayout>

        <TextView
            android:id="@+id/turnsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/waiting_for_rival"
            android:textSize="36sp"
            android:textStyle="bold"
            android:translationY="220dp" />


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
